--- a/src/apollo/core/templates/core/forms_menu.html
+++ b/src/apollo/core/templates/core/forms_menu.html
@@ -1,18 +1,17 @@
 {% if checklist_forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Checklists<b class="caret"></b></a>
-    <ul class="dropdown-menu">
-        {% for form in checklist_forms %}
-        <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
-        {% endfor %}
-    </ul>
-</li>
+{% for form in checklist_forms %}
+<li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
+{% endfor %}
 {% endif %}
 {% if incident_forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Incidents<b class="caret"></b></a>
-    <ul class="dropdown-menu">
-        {% for form in incident_forms %}
-        <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
-        {% endfor %}
-    </ul>
-</li>
+{% for form in incident_forms %}
+<li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
+{% endfor %}
+{% endif %}
+{% if perms.core.can_verify %}
+{% if checklist_forms %}
+{% for form in checklist_forms %}
+<li><a href="{% url verifications_list form.pk %}"><i class="icon-warning-sign"></i> Verification</a></li>
+{% endfor %}
+{% endif %}
 {% endif %}
