exports for contacts

--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -1,7 +1,7 @@
 {% extends "core/layout.html" %}
 {% load apollo %}
 {% block javascripts %}
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&amp;sensor=false"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/markerclusterer.js"></script>
 {% endblock %}
 {% block content %}
