--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -3,7 +3,7 @@
 {{ page_title }}
 {% if perms.core.message_observers %}
 <div class="btn-group pull-right">
-  <a id="" href="#" role="button" class="btn btn-default">Export</a>
+  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn" type="submit">Export</a></form>
 </div>
 <div class="btn-group pull-right">
   <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">Send Message</a>
