--- a/src/apollo/core/templates/core/submission_items.html
+++ b/src/apollo/core/templates/core/submission_items.html
@@ -9,6 +9,7 @@
     <td>{{ submission.observer.supervisor.name }}</td>
     {% endif %}
     <td>{{ submission.observer.name }}</td>
+    <td>{{ submission.observer.phone }}</td>
     {% if form.type == 'CHECKLIST' %}
     {% for group in form_groups %}
     <td style="text-align:center">
@@ -39,7 +40,7 @@
 {% empty %}
 {% if perms.core.change_submission %}
 {% if form.type == 'CHECKLIST' %}
-{% with location_types|length|add:"4" as lt_count %}
+{% with location_types|length|add:"5" as lt_count %}
 {% with form_groups|length|add:lt_count as colspan %}
 <tr class="warning">
     <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
@@ -47,7 +48,7 @@
 {% endwith %}
 {% endwith %}
 {% else %}
-{% with location_types|length|add:"4" as lt_count %}
+{% with location_types|length|add:"5" as lt_count %}
 {% with form_fields|length|add:lt_count as colspan %}
 <tr class="warning">
     <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
@@ -57,7 +58,7 @@
 {% endif %}
 {% else %}
 {% if form.type == 'CHECKLIST' %}
-{% with location_types|length|add:"3" as lt_count %}
+{% with location_types|length|add:"4" as lt_count %}
 {% with form_groups|length|add:lt_count as colspan %}
 <tr class="warning">
     <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
@@ -65,7 +66,7 @@
 {% endwith %}
 {% endwith %}
 {% else %}
-{% with location_types|length|add:"3" as lt_count %}
+{% with location_types|length|add:"4" as lt_count %}
 {% with form_fields|length|add:lt_count as colspan %}
 <tr class="warning">
     <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
