bug fix in template truncating view of some parts of incident editing

--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -125,7 +125,7 @@
         </tbody>
       </table>
       {% else %}
-      <table class="table table-striped table-bordered table-hover">
+      <table class="table table-striped table-bordered table-hover" style="margin-bottom:5.5em;">
         <tbody>
           <tr>
             <td colspan="2">&nbsp;</td>
