--- a/src/apollo/core/templates/core/verification_filter.html
+++ b/src/apollo/core/templates/core/verification_filter.html
@@ -5,6 +5,7 @@
     <div class="controls controls-row">
       {{ filter_form.observer_id }}
       {{ filter_form.location }}
+      {{ filter_form.verification }}
     </div>
     <div class="controls">
     {% for flag in form_flags %}
