--- a/src/apollo/core/templates/core/verification_header.html
+++ b/src/apollo/core/templates/core/verification_header.html
@@ -7,5 +7,6 @@
     {% for flag in form_flags %}
     <th style="text-align:center">{{ flag }}</th>
     {% endfor %}
+    <th style="text-align:center"><abbr title="Status"><i class="icon-eye-open"></i></abbr></th>
     {% if perms.core.change_submission %}<th style="text-align:center">Edit</th>{% endif %}
 </tr>
