--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -47,7 +47,7 @@
           <th>Role</th>
           <th>Phone No.</th>
           <th>Location</th>
-          <th>Partner</th>
+          <th>Organization</th>
           {% if perms.core.change_observer %}<th></th>{% endif %}
         </tr>
       </thead>
