--- a/src/apollo/core/templates/core/verification_edit.html
+++ b/src/apollo/core/templates/core/verification_edit.html
@@ -8,11 +8,7 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th width="15%">&nbsp;</th>
-            <th>1</th>
-          </tr>
-          <tr>
-            <th>Observer</th>
+            <th width="20%">Observer</th>
             <td><strong>{{ submission.submissions.all.0.observer.observer_id }}</strong> &mdash; <strong>{{ submission.submissions.all.0.observer.name }}</strong>{% if submission.submissions.all.0.observer.phone %} ({{ submission.submissions.all.0.observer.phone }}){% endif %}</td>
           </tr>
           <tr>
@@ -57,6 +53,33 @@
             <td style="text-align: right; vertical-align: middle">{{ submission_form.data__verification.label }}</td>
             <td>{{ submission_form.data__verification }}</td>
           </tr>
+        </tbody>
+      </table>
+
+      <table class="table table-striped table-bordered table-hover submission-table">
+        <tbody>
+          {% for fieldset in data_form.fieldsets %}
+          {% if fieldset.legend %}
+          <tr>
+            <td colspan="3"><h4 class="{{ fieldset.classes }}">{{ fieldset.legend }}</h4></td>
+          </tr>
+          {% endif %}
+          {% for field in fieldset %}
+          <tr>
+            <td>{{ field.label }}</td>
+            <td>{{ field.help_text }}
+              {% if field.field.choices %}
+              <span class="options">
+                {% for choice in field.field.choices %}
+                <span class="option"><strong>({{ choice.0 }})</strong> {{ choice.1 }}</span>
+                {% endfor %}
+              </span>
+              {% endif %}
+            </td>
+            <td class="submission-field">{{ data_form|keyvalue:field.name }}</td>
+          </tr>
+          {% endfor %}
+          {% endfor %}
         </tbody>
       </table>
     </div>
