--- a/src/apollo/core/templates/core/results.html
+++ b/src/apollo/core/templates/core/results.html
@@ -1,24 +1,22 @@
 {% extends "core/layout.html" %}
 {% load apollo %}
 {% block content %}
-<div class="row-fluid">
-	<div class="span12">
-		<div class="span8">
-			<ul class="breadcrumb">
-			  <li>Zimbabwe<li>
-			</ul>
-		</div>
-		<div class="span4">
-			<form class="form-horizontal pull-right">
-				<select class="">
-					<option>Sample</option>
-				</select>
-				<button class="btn btn-warning"><i class="icon-search icon-white"></i> Filter</button>
-			</form>
-		</div>
-	</div>
+<div class="row">
+    <div class="span8">
+    	<ul class="breadcrumb">
+    	  <li>Zimbabwe<li>
+    	</ul>
+    </div>
+    <div class="span4">
+    	<form class="form-horizontal pull-right">
+    		<select class="">
+    			<option>Sample</option>
+    		</select>
+    		<button class="btn btn-warning"><i class="icon-search icon-white"></i> Filter</button>
+    	</form>
+    </div>
 </div>
-<div class="row-fluid">
+<div class="row">
     <div class="span12">
         <ul class="nav nav-pills">
           <li class="active">
