modified results analysis template

--- a/src/apollo/core/templates/core/results.html
+++ b/src/apollo/core/templates/core/results.html
@@ -9,7 +9,7 @@
     </div>
     <div class="span4">
     	<form class="form-horizontal pull-right">
-    		<select class="">
+    		<select class="span2">
     			<option>Sample</option>
     		</select>
     		<button class="btn btn-warning"><i class="icon-search icon-white"></i> Filter</button>
