Added more urban/rural fields to results templates, added custom css for styling results fields

--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -2,8 +2,9 @@
 .con_style { padding-top:1.2em; padding-bottom:1em; }
 .options { display: block; margin-top: 0.5em; }
 .option { margin-right: 1em; }
+.numeric, .table .numeric { text-align: right; }
 .submission-table .submission-field ul { list-style-type: none; margin: 0; }
-.submission-table .centered { text-align: center; }
+.submission-table .centered, .centered, .table .centered { text-align: center; }
 .submission-table .submission-field ul input[type="radio"], input[type="checkbox"] { margin: -2px 0 0 0;}
 .breadcrumb .locationtype { color: #DDD; }
 abbr[data-original-title] {cursor: help;border-bottom: 1px dotted #999999;}
