--- a/src/apollo/core/static/css/bootstrap.css
+++ b/src/apollo/core/static/css/bootstrap.css
@@ -1954,7 +1954,7 @@ table {
 
 .table-hover tbody tr:hover td,
 .table-hover tbody tr:hover th {
-  background-color: #f5f5f5;
+  background-color: #fcf8e3;
 }
 
 table [class*=span],
