--- a/src/apollo/core/templates/core/analysis_menu.html
+++ b/src/apollo/core/templates/core/analysis_menu.html
@@ -7,3 +7,12 @@
     </ul>
 </li>
 {% endif %}
+{% if voting_forms %}
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list-alt"></i> Results <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+        {% for form in voting_forms %}
+        <li><a href="{% url results_analysis form.pk %}"><i class="icon-list-alt"></i> {{ form.name }}</a></li>
+        {% endfor %}
+    </ul>
+</li>
+{% endif %}
